fix footer align center

--- a/style.css
+++ b/style.css
@@ -21,7 +21,6 @@ p {
   padding: 2% 5%;
 }
 
-
 @media screen and (max-width: 768px) {
   main {
     flex-direction: column;
@@ -48,9 +47,10 @@ p {
 .code-card {
   border-style: dotted;
   border-color: var(--code-text-color);
-  background-image: linear-gradient(rgba(232, 102, 236, 0.3) 0%,
-  rgba(232, 102, 236, 0.6) 100%);
-
+  background-image: linear-gradient(
+    rgba(232, 102, 236, 0.3) 0%,
+    rgba(232, 102, 236, 0.6) 100%
+  );
 }
 
 .code-card .card-header {
@@ -69,4 +69,8 @@ p {
   background-color: var(--main-bg-color);
   border-style: double;
   border-color: var(--code-text-color);
+}
+
+footer {
+  text-align: center;
 }
